--- a/index.html
+++ b/index.html
@@ -17,8 +17,61 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      <!-- Time blocks go here -->
+      <div id="9am" class="row time">
+        <div class="col-md-auto hour">9am</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+      
+      <div id="10am" class="row time">
+        <div class="col-md-auto hour">10am</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+      
+      <div id="11am" class="row time">
+        <div class="col-md-auto hour">11am</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="12pm" class="row time">
+        <div class="col-md-auto hour">12pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="1pm" class="row time">
+        <div class="col-md-auto hour">1pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="2pm" class="row time">
+        <div class="col-md-auto hour">2pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="3pm" class="row time">
+        <div class="col-md-auto hour">3pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="4pm" class="row time">
+        <div class="col-md-auto hour">4pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
+
+      <div id="5pm" class="row time">
+        <div class="col-md-auto hour">5pm</div>
+        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <button type="button" class="col-md-1 btn save"></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
