Added function to color code timeblocks based on current time

--- a/index.html
+++ b/index.html
@@ -19,57 +19,57 @@
     </header>
 
     <div class="container">
-      <div id="9am" class="row time">
+      <div id="9am" class="row time-block">
         <div class="col-md-auto hour">9am</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="9" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
       
-      <div id="10am" class="row time">
+      <div id="10am" class="row time-block">
         <div class="col-md-auto hour">10am</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="10" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
       
-      <div id="11am" class="row time">
+      <div id="11am" class="row time-block">
         <div class="col-md-auto hour">11am</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="11" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="12pm" class="row time">
+      <div id="12pm" class="row time-block">
         <div class="col-md-auto hour">12pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="12" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="1pm" class="row time">
+      <div id="1pm" class="row time-block">
         <div class="col-md-auto hour">1pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="1" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="2pm" class="row time">
+      <div id="2pm" class="row time-block">
         <div class="col-md-auto hour">2pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="2" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="3pm" class="row time">
+      <div id="3pm" class="row time-block">
         <div class="col-md-auto hour">3pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="3" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="4pm" class="row time">
+      <div id="4pm" class="row time-block">
         <div class="col-md-auto hour">4pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="4" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
 
-      <div id="5pm" class="row time">
+      <div id="5pm" class="row time-block">
         <div class="col-md-auto hour">5pm</div>
-        <input class="col-md-10 description" placeholder="Enter task here"></input>
+        <input class="col-md-10 description" name="5" placeholder="Enter task here"></input>
         <button type="button" class="col-md-1 btn save"></button>
       </div>
     </div>
