--- a/index.html
+++ b/index.html
@@ -22,55 +22,55 @@
       <div id="9am" class="row time-block">
         <div class="col-md-auto hour">9am</div>
         <textarea id="nine" class="col-md-10 description" name="9" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
       
       <div id="10am" class="row time-block">
         <div class="col-md-auto hour">10am</div>
         <textarea id="ten" class="col-md-10 description" name="10" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
       
       <div id="11am" class="row time-block">
         <div class="col-md-auto hour">11am</div>
         <textarea id="eleven" class="col-md-10 description" name="11" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="12pm" class="row time-block">
         <div class="col-md-auto hour">12pm</div>
         <textarea id="twelve" class="col-md-10 description" name="12" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="1pm" class="row time-block">
         <div class="col-md-auto hour">1pm</div>
         <textarea id="one" class="col-md-10 description" name="13" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="2pm" class="row time-block">
         <div class="col-md-auto hour">2pm</div>
         <textarea id="two" class="col-md-10 description" name="14" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="3pm" class="row time-block">
         <div class="col-md-auto hour">3pm</div>
         <textarea id="three" class="col-md-10 description" name="15" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="4pm" class="row time-block">
         <div class="col-md-auto hour">4pm</div>
         <textarea id="four" class="col-md-10 description" name="16" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
 
       <div id="5pm" class="row time-block">
         <div class="col-md-auto hour">5pm</div>
         <textarea id="five" class="col-md-10 description" name="17" placeholder="Enter task here"></textarea>
-        <button type="button" class="col-md-1 btn save"></button>
+        <button type="button" class="col-md-1 btn save">Save</button>
       </div>
     </div>
 
